# hydep

./: .coveragerc  .gitignore  LICENSE  README.rst  TODO.rst  hydep.cfg.example  pytest.ini  rbtodo  runtests  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  high-fidelity-solver.md  reduced-order-solver.md
chains/: README.rst  chain_endfb71.xml
docs/: Makefile  conf.py  configuration.rst  index.rst  introduction.rst  scope.rst
docs/_templates/: myintegrator.rst  mymaterial.rst
docs/api/: abc.rst  depletion.rst  exceptions.rst  features.rst  geometry.rst  hdf.rst  index.rst  integrators.rst  internal.rst  lib.rst  main.rst  materials.rst  model.rst  problem.rst  serpent.rst  settings.rst  sfv.rst  simplero.rst
docs/examples/: index.rst  pincell.ipynb  post-processing.ipynb
examples/: pwr.py
src/hydep/: __init__.py  _integrator.py  cartesian.py  chain.py  constants.py  exceptions.py  h5store.py  hdf.py  hdfstore.py  integrators.py  lib.py  manager.py  materials.py  model.py  pin.py  problem.py  settings.py  simplerom.py  solvers.py  stack.py  store.py  typed.py  universe.py
src/hydep/internal/: __init__.py  _abc.py  _cram.py  abc.py  cram.py  features.py  fissionyields.py  isotope.py  manager.py  microxs.py  registry.py  results.py  symbols.py  timestep.py  timetravel.py  utils.py  xs.py
src/hydep/serpent/: __init__.py  fmtx.py  processor.py  runner.py  settings.py  solver.py  utils.py  writer.py  xsavail.py
src/hydep/sfv/: __init__.py  lib.py  solver.py  utils.py
src/hydep/store/: __init__.py  base.py  h5store.py
tests/: __init__.py  analytic_chain.xml  conftest.py  simple_chain.xml  test_chain.py  test_configuration.py  test_features.py  test_fissionYields.py  test_geometry.py  test_integrators.py  test_manager.py  test_material.py  test_microxs.py  test_model.py  test_nubarextrap.py  test_predictor_setup.py  test_problem.py  test_registry.py  test_settings.py  test_sfv.py  test_store.py  test_timemachine.py  test_typed.py  test_utils.py  test_xsarray.py
tests/regressions/: __init__.py  conftest.py
tests/regressions/coupled_pincell/: __init__.py  results-reference.h5  test_external.py
tests/regressions/cram/: test_cram.py
tests/regressions/depletion2x2/: __init__.py  concentrations_reference.txt  mxs1.txt  partial_burned.txt  test_2x2deplete.py
tests/regressions/serpent2x2/: flux_reference.txt  fmtx_reference.txt  keff_reference.txt  test_solver.py
tests/regressions/sfvsimple/: __init__.py  conftest.py  (+1 more)
tests/serpent/: 2x2_ref.txt  __init__.py  conftest.py  steady_state_refefence  test_runner.py  test_settings.py  test_utils.py  test_write2x2.py  test_writer.py
