[metadata]
name = hydep
version = 0.0.0
description = A framework and library for hybrid depletion schemes
author = Andrew Johnson
author_email = ajohnson400@gatech.edu
python_requires = >= 3.6

[options]
zip_safe=False
package_dir =
    =src
packages = find:
install_requires =
    numpy
    scipy

[options.packages.find]
where=src

[options.extras_require]
serpent=serpentTools>=0.9.1
dev=pytest

[flake8]
exclude=__pycache__,.git,build,dist,src/**/__init__.py
max-line-length=90

[tool:pytest]
addopts = --doctest-modules
markers =
    serpent: mark a test as needing and running Serpent

[coverage:run]
source=hydep
concurrency=multiprocessing
