[metadata]
name = hydep
version = 0.1.0
description = A framework and library for hybrid depletion schemes
author = Andrew Johnson
author_email = ajohnson400@gatech.edu
python_requires = >= 3.6

[options]
zip_safe=False
package_dir =
    =src
packages = find:
install_requires =
    numpy
    scipy

[options.packages.find]
where=src

[options.extras_require]
serpent = serpentTools>=0.9.2
dev = pytest; serpentTools>=0.9.2; h5py<3
sfv = sfv @ git+ssh://git@github.com:CORE-GATECH-GROUP/sfv.git@6bc58e08ca27cb154f82af6288ee09192415ed0d
docs = nbsphinx,ipython

[flake8]
exclude=__pycache__,.git,build,dist,src/**/__init__.py
max-line-length=90

[tool:pytest]
addopts = --doctest-modules -W ignore:"Gdk": -W ignore::hydep.DataWarning:
markers =
    serpent: mark a test as needing and running Serpent
    sfv: mark as test as needing sfv package
    flaky: Test that is likely to fail ¯\_(ツ)_/¯

[coverage:run]
source=hydep
concurrency=multiprocessing
